yml python실행시 파일 존재여부 확인 추가

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,5 +84,6 @@ jobs:
         export DISPLAY=:99  # 가상 디스플레이 설정
         Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &  # 가상 디스플레이 서버 실행
         sleep 3  # 서버 시작 대기
-        timeout 10s python3 UDI_qrcode_gen_r01.py || true  # 10초 후 자동 종료
+        if [ ! -f UDI_qrcode_gen_r01.py ]; then echo "Error: UDI_qrcode_gen_r01.py not found!" && exit 1; fi  # 파일 존재 여부 확인
+        timeout 10s python3 UDI_qrcode_gen_r01.py  # 10초 후 자동 종료
 
